--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,10 @@ language: python
 python:
   - "2.7"
   - "3.4"
+#command to install dependencies
 install:
   - pip install -r requirements.txt
-  - cd ..
-  - django-admin.py startproject --template=./edge --extension=py,md,html,env my_proj
-  - cd my_proj/src
-  - cp my_proj/settings/local.sample.env my_proj/settings/local.env
-  - python manage.py migrate
+#command to run test
 script:
-  - python manage.py test profiles
+  - cd src
+  - python manage.py test
