--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,6 @@ install:
 #command to run test
 script:
   - cd src
+  - python manage.py makemigrations
+  - python manage.py migrate
   - python manage.py test
